<resources>
    <string name="app_name">MJLIFE</string>
    <string name="title_home">Home</string>
    <string name="password">PASSWORD</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="ID">ID</string>

    <!-- 우영학 하드 코딩 -->
    <string name="busTitle45">45인승(노선 : 학교 - DMC역 - 새절역 - 학교)</string>
    <string name="busNumber">운행수</string>
    <string name="stationSchool">학교</string>
    <string name="stationDMC">DMC역</string>
    <string name="stationSaejeol">새절역</string>

    <string name="busTitle29">29인승(노선 : 학교 - 신촌역 - 홍대역 - 학교)</string>
    <string name="stationHongdae">홍대역</string>
    <string name="stationSinchon">신촌역</string>

    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>

    <string name="Notice45">※ 2회, 6회차 운행버스는 29인승으로 운행</string>
    <string name="Notice29">※ 2회, 6회차 운행버스는 45인승으로 운행</string>

    <string name="startNumber1">8:05</string>
    <!-- 우영학 하드 코딩 -->

    <!--양정원 -->
    <string-array name="subject">
        <item>객체지향언어실습</item>
        <item>모바일프로그래밍</item>
        <item>서버시스템관리</item>
        <item>웹프로그래밍</item>
        <item>인공지능시스템</item>
        <item>컴퓨터아키텍쳐</item>
    </string-array>

    <string-array name="day">
        <item>월요일</item>
        <item>화요일</item>
        <item>수요일</item>
        <item>목요일</item>
        <item>금요일</item>
    </string-array>
    <!-- //양정원 -->
</resources>
