<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/school"
        android:layout_marginTop="30dp"

        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school"
        android:layout_marginTop="5dp"
        app:layout_constraintVertical_bias="0.314"/>

    <RadioGroup
        android:id="@+id/rdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <RadioButton
            android:id="@+id/rdoS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="학생"
            style="@style/head"
            android:includeFontPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <RadioButton
            android:id="@+id/rdoP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="교수"
            style="@style/head"
            android:includeFontPadding="false"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

    </RadioGroup>





    <EditText
        android:id="@+id/ID"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdg"
        android:layout_marginTop="10dp"
        android:hint="@string/ID"
        style="@style/edit"
        android:includeFontPadding="false"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/edit"
        android:includeFontPadding="false"
        />
    
    <Button
        android:id="@+id/login"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="6dp"
        android:text="@string/login"
        style="@style/basis"
        android:includeFontPadding="false"/>
    <Button
        android:id="@+id/join"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        android:layout_marginTop="3dp"
        android:text="@string/join"
        style="@style/basis"
        android:includeFontPadding="false"/>





</androidx.constraintlayout.widget.ConstraintLayout>